# SmartEdu

./: .gitignore  README.md  arch.md  pyproject.toml  script.sh
capstone/: .gitignore  README.md  _norm_dump.txt  _norm_tail.txt  arch.md  main.py  run_test.py  subjects.csv  test.py  test_minio.py  test_mongo.py
capstone/FE/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json
capstone/FE/src/: proxy.ts
capstone/FE/src/app/: globals.css  layout.tsx
capstone/FE/src/contexts/: AuthContext.tsx  SessionManager.tsx
capstone/FE/src/hooks/: useChatPoll.ts  useSession.ts
capstone/FE/src/lib/: api.ts  normalise.ts
capstone/TA/: .gitignore  ta_module.py
capstone/TA/agent/: base.py  injector.py  middleware.py  ollama_patch.py
capstone/TA/api/: route.py
capstone/TA/edu/: smart_edu.py  utils.py
capstone/TA/edu/helper/: context.py  few_shot.py  prompt.py  schema.py  tree_order.py  tree_render.py  utils.py
capstone/TA/edu/workflow/: few_shot.py  prompt.py  retrieve.py  roadmap.py  (+3 more)
capstone/TA/tools/: context_tools.py  factory.py  retrieval.py  tool_config.py
capstone/TA/tracing/: __init__.py  prompt_sync.py  schema.py  tracer.py  writer.py
capstone/core/: .env.example  config.py  dependencies.py
capstone/core/api/: life_span.py
capstone/core/llm/: config.py  llm_engine.py
capstone/core/model/: embedding.py
capstone/core/repo/: .gitignore  docker-compose.yaml
capstone/core/schema/: factory.py  wf_state.py
capstone/core/util/: cypher.py  file_extractor.py
capstone/knowledge/: knowledge_construction_service.py
capstone/knowledge/api/: route.py
capstone/knowledge/engine/: extract.py  normalize.py  subjects.csv
capstone/knowledge/service/: course_ingest.py  pdf_loader.py
capstone/student/: .gitignore  Student_Tracker.py  api.py  auth.py  memo.py  session_context.py
docs/description/: chat_TA.md  chat_student.md  des.md  walkthrough.md
docs/draw/: Draw.excalidraw  Method.excalidraw  System.excalidraw
docs/latex/: References.bib  main.tex  old_proposal.txt  script.sh
docs/latex/Contents/: 01_Introduction.tex  02_Fundamental extra.tex  02_Fundamental.tex  03_requirements.tex  04_Proposal.tex  05_System.tex  06_Experiments.tex  07_Eval.tex
docs/latex/Intro/: LoiCamDoan.tex  LoiCamOn.tex  TomTat.tex
docs/latex/Outro/: Supplement.tex
draw/: Draw.excalidraw
latex/: References.bib  main.aux  main.bbl  main.blg  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc
latex/Contents/: 02_Fundamental.tex  03_Proposal.tex
latex/Images/fundamental/: multimodal.tex
latex/Intro/: LoiCamDoan.tex  LoiCamOn.tex
latex/Outro/: citation-389497305.bib
latex/table/chap2/: edu_sys.tex  frameworks.tex
(+86 files in other folders)
