[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=6.0.3",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "spacy>=3.8.11",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "sentence-transformers>=5.2.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.57.3",
    "langchain-ollama>=1.0.1",
    "langchain-core>=1.2.5",
    "en-core-web-sm",
    "moderngl>=5.12.0",
    "imgui-bundle>=1.92.5",
    "pyglm>=2.8.3",
    "python-louvain>=0.16",
    "networkx>=3.6.1",
    "pyvis>=0.3.2",
    "docling>=2.70.0",
    "neo4j-graphrag>=1.12.0",
    "langchain>=1.2.10",
    "aiohttp>=3.13.3",
    "fastapi>=0.135.1",
    "pymilvus>=2.6.9",
    "minio>=7.2.20",
    "uvicorn>=0.41.0",
    "langsmith>=0.5.2",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "langfuse>=4.5.1",
    "pymongo>=4.11.1",
    "PyJWT>=2.10.1",
    "python-multipart>=0.0.28",
    "json-repair>=0.44.1",
]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
